--- a/src/index.css
+++ b/src/index.css
@@ -13,17 +13,30 @@ padding: 0;
 box-sizing: border-box;
 }
 body {
-padding-inline: 1rem;
-background-color: rgb(99, 88, 70) ;
+  background-color: rgb(99, 88, 70) ;
+}
+.wrapper {
+  padding-inline: 2rem;
 }
 h1{
 text-align: center;
 font-weight: bold;
 font-size: 4rem;
-letter-spacing: .5rem;
+
 font-family: vani;
-color: rgb(41, 37, 30);
+color: rgb(45, 210, 252);
+animation: jiji 1s ease-in-out forwards; 
 }
+@keyframes jiji {
+  50%{
+  letter-spacing: 0;
+}
+100%{
+  letter-spacing: 1rem;
+
+  }
+}
+
 .list-container{
 margin-top: 1rem;
 display: flex;
@@ -37,12 +50,17 @@ list-style-type: none;
 .list-item{
   width: 150px;
   overflow: hidden;
-
+  margin-top: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  transform: scale(1.4);
+  transition: all .5s ease-in-out;
 }
-
+.list-item:hover{
+  z-index: 1000;
+  transform: scale(1.5) translateY(-5%);
+  }
 .item-img-carte{
   display: flex;
   align-items: center;
@@ -129,7 +147,7 @@ gap: .2rem;
   border: 2px solid #140f0f;
   padding: 15px;
   background-color: rgb(41, 38, 34) ;
-  color: #f70505;
+  color: #ffffff;
   font-size: small;
   font-weight: bold;
   border: 0;
@@ -171,4 +189,18 @@ opacity: 1;
 }
 .icon-button:hover{
   transform: scale(1.3);
+}
+
+@media screen and (max-width: 767px) {
+form{
+display: flex;
+flex-direction: column;
+}
+.submit-btn{
+display: flex;
+gap: 1rem;
+}  
+h1{
+font-size: 3rem;
+}
 }
